# inky

./: .gitignore  .mocha-puppeteer-config.js  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  archive-plan.md  contributing.md  gulpfile.js  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yml  release.yml
bindings/node/: index.d.ts  index.js  package.json  test.js
bindings/php/: composer.json  test.php
bindings/php/src/: Inky.php
bindings/php/src/Driver/: DriverInterface.php  FfiDriver.php
bindings/php/stubs/: inky.h
bindings/python/: pyproject.toml  test.py
bindings/python/src/inky/: __init__.py
bindings/ruby/: inky-email.gemspec  test.rb
bindings/ruby/lib/: inky.rb
crates/inky-cli/: Cargo.toml
crates/inky-cli/scss/components/: _alignment.scss  _button.scss  _callout.scss  _dark-mode.scss  _media-query.scss  _normalize.scss  _outlook-first.scss  _typography.scss  _visibility.scss
crates/inky-cli/scss/grid/: _block-grid.scss  _grid.scss
crates/inky-cli/scss/util/: _util.scss
crates/inky-cli/src/: build.rs  config.rs  init.rs  main.rs  migrate.rs  scss.rs  serve.rs  util.rs  watch.rs
crates/inky-core/: Cargo.toml
crates/inky-core/src/: attrs.rs  color.rs  components.rs  config.rs  include.rs  inline.rs  lib.rs  migrate.rs  plaintext.rs  templating.rs  validate.rs
crates/inky-core/src/components/: accordion.rs  alert.rs  badge.rs  block_grid.rs  blockquote.rs  button.rs  callout.rs  card.rs  center.rs  column.rs  container.rs  divider.rs  helpers.rs  hero.rs  inky.rs  menu.rs  mod.rs  outlook.rs  preview.rs  row.rs  social.rs  spacer.rs  video.rs  wrapper.rs
crates/inky-core/src/validate/: mod.rs  output.rs  source.rs  spam.rs
crates/inky-core/tests/: fixtures.rs  hybrid.rs  templating.rs
crates/inky-ffi/: Cargo.toml  build.rs  inky.h
crates/inky-ffi/src/: lib.rs
crates/inky-wasm/: Cargo.toml
crates/inky-wasm/src/: lib.rs
docs/: README.md  bindings.md  compatibility.md  components.md  data-merging.md  email-guide.md  getting-started.md  hybrid-output.md  migration.md  styles.md  troubleshooting.md
homebrew/: README.md  inky.rb
lib/: component-factory.js  componentFactory.js  componentLibrary.js  iff.js  inky.js  make-column.js  makeColumn.js  makeColumn2.js  raw.js  renderer.js
lib/components/: block-grid.js  button.js  callout.js  center.js  column.js  container.js  divider.js  index.js  inky.js  item.js  menu.js  row.js  spacer.js  wrapper.js
lib/util/: get-attrs.js  getAttrs.js
scss/: _global.scss  inky.scss
scss/components/: _alignment.scss  _button.scss  _callout.scss  _dark-mode.scss  _divider.scss  _media-query.scss  _menu.scss  _normalize.scss  _outlook-first.scss  _thumbnail.scss  _typography.scss  _visibility.scss
scss/grid/: _block-grid.scss  _grid.scss
scss/settings/: _index.scss  _settings.scss
scss/util/: _index.scss  _util.scss
spec/: components-spec.js  components.js  grid-spec.js  grid.js  inky.js
spec/support/: jasmine.json
test/: components-spec.js  components.js  grid-spec.js  grid.js  inky.js  renderer.js
test/browser/: index.js
test/core/: components.js  grid.js  inky.js  renderer.js  utils.js
test/fixtures/: test.html
test/fixtures/basic/: test.html
test/fixtures/components/: mock.js
test/fixtures/custom-components/: test.html
test/lib/: compare.js
test/node/: index.js
tests/: compare.js  test-cli.sh
tests/fixtures/: components.json  grid.json  migration.json  v2-components.json  v2-grid.json  v2-nesting.json
tests/templates/: alignment.inky  attributes.inky  button-inky.inky  expander.inky  fluid-header.inky  grid-collapse.html  grid-inky.inky  images.inky  inliner-bugs.inky  layout-break-center.html  outlook-image-width.inky  spacer.html  thumbnail.inky  visibility.html
tests/templates/expected/: alignment.html  anchor.html  attributes.html  block-inky.html  button-expanded-inky.html  button-hollow.html  button-inky.html  callout-in-grid.html  center-width.html  container-radius.html  expander.html  fluid-header.html  grid-collapse.html  grid-inky.html  grid-nested-inky.html  grid-with-callouts-inky.html  hr.html  images.html  index.html  inliner-bugs.html  layout-break-center.html  list.html  menu-inky.html  offset-inky.html  outlook-image-width.html  spacer.html  spacing.html  thumbnail.html  type.html  visibility.html
