[project]
name = "inky-email"
version = "2.0.0-beta.5"
description = "Transform email templates into email-safe HTML — powered by Rust"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["email", "html", "inky", "foundation", "responsive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://github.com/foundation/inky"
Repository = "https://github.com/foundation/inky"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
