[package]
name = "inky-cli"
version = "2.0.0"
edition = "2021"
description = "Inky CLI — transform, migrate, and validate email templates"
license = "MIT"

[[bin]]
name = "inky"
path = "src/main.rs"

[dependencies]
inky-core = { path = "../inky-core", features = ["css-inlining"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
colored = "2"
grass = "0.13.4"
regex = "1.12.3"
