[package]
name = "inky-cli"
version = "2.0.0-beta.3"
edition = "2021"
description = "Inky CLI — transform, migrate, and validate email templates"
license = "MIT"
repository = "https://github.com/foundation/inky"
readme = "../../README.md"
include = ["src/**/*", "scss/**/*", "Cargo.toml"]

[[bin]]
name = "inky"
path = "src/main.rs"

[dependencies]
inky-core = { version = "2.0.0-beta.3", path = "../inky-core", features = ["css-inlining", "templating", "serialize"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
colored = "2"
grass = "0.13.4"
regex = "1.12.3"
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
