[package]
name = "inky-ffi"
version = "2.0.0"
edition = "2021"
description = "C FFI bindings for Inky"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "inky"

[dependencies]
inky-core = { path = "../inky-core", features = ["css-inlining"] }

[build-dependencies]
cbindgen = "0.27"
