[package]
name = "inky"
version = "2.0.0-beta.5"
edition = "2021"
description = "WASM bindings for Inky"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
inky-core = { version = "2.0.0-beta.5", path = "../inky-core", features = ["css-inlining", "templating"] }
wasm-bindgen = "0.2"
serde_json = "1"
